# internal/domain/entity/task_history.go
@@ -3,11 +3,11 @@ package entity
 import "time"
 
 type TaskHistory struct {
-	ID        int
-	TaskID    int
-	Field     string
-	OldValue  string
-	NewValue  string
-	ChangedBy int
-	ChangedAt time.Time
+	Id        int       `json:"id"`
+	TaskID    int       `json:"task_id"`
+	Field     string    `json:"field"`
+	OldValue  string    `json:"old_value"`
+	NewValue  string    `json:"new_value"`
+	ChangedBy int       `json:"changed_by"`
+	ChangedAt time.Time `json:"changed_at"`
 }
